@@ -39,13 +39,16 @@ public class TitleAndTypePublicationFinder implements FindExistingPublicationSer
     private final ResourceService resourceService;
     private final UriRetriever uriRetriever;
     private final String apiHost;
+    private final DuplicatePublicationReporter duplicatePublicationReporter;
 
     public TitleAndTypePublicationFinder(ResourceService resourceService,
                                          UriRetriever uriRetriever,
-                                         String apiHost) {
+                                         String apiHost,
+                                         DuplicatePublicationReporter duplicatePublicationReporter) {
         this.resourceService = resourceService;
         this.uriRetriever = uriRetriever;
         this.apiHost = apiHost;
+        this.duplicatePublicationReporter = duplicatePublicationReporter;
     }
 
     @Override
@@ -58,6 +61,10 @@ public class TitleAndTypePublicationFinder implements FindExistingPublicationSer
             publicationRepresentation.publication());
         if (potentialExistingPublications.isEmpty()) {
             return Optional.empty();
+        }
+        if (FindExistingPublicationService.moreThanOneDuplicateFound(potentialExistingPublications)) {
+            duplicatePublicationReporter.reportDuplicatePublications(potentialExistingPublications,
+                                                                            publicationRepresentation.brageRecord(), DuplicateDetectionCause.TITLE_DUPLICATES);
         }
         return Optional.of(new PublicationForUpdate(MergeSource.SEARCH, potentialExistingPublications.getFirst()));
     }
@@ -81,7 +88,6 @@ public class TitleAndTypePublicationFinder implements FindExistingPublicationSer
     private List<Publication> searchForPublicationsByTypeAndTitle(Publication publication) {
         var response = fetchResponse(searchByTypeAndTitleUri(publication));
         return response.map(this::toResponse)
-                   .filter(SearchResourceApiResponse::containsSingleHit)
                    .map(SearchResourceApiResponse::hits)
                    .orElse(List.of())
                    .stream()
@@ -89,7 +95,7 @@ public class TitleAndTypePublicationFinder implements FindExistingPublicationSer
                    .map(this::getPublicationByIdentifier)
                    .flatMap(Optional::stream)
                    .filter(item -> PublicationComparator.publicationsMatch(item, publication))
-                   .collect(Collectors.toList()).reversed();
+                   .toList();
     }
 
     private Optional<Publication> getPublicationByIdentifier(SortableIdentifier identifier) {
